Improve Client with better logging and optimized URI handling